# junior-predict

./: .gitignore  Dockerfile  Dockerfile-prod  docker-compose-jp-prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
src/: main.py  model.py  sklearn_model.py
